--- a/purple.css
+++ b/purple.css
@@ -2,7 +2,7 @@
 	--mainColor:#46344E;
 	--secondaryColor:#382a3f;
 
-	--borderColor:#1d1520;
+	--borderColor:#030303;
 
 	--mainText:#fff;
 	--secondaryText:#eeeeee;
@@ -10,10 +10,10 @@
 	--themeDotBorder:#FFF;
 
 	--previewBg:rgb(29, 21, 32, 0.8);
-	--previewShadow:#2b202f;
+	--previewShadow: #441e52;
 
 
-	--buttonColor:#8534a3;
+	--buttonColor:#721e91;
 
 
 }
